feat: add link decoder feature

--- a/src/components/HomePageContent/home-content.module.scss
+++ b/src/components/HomePageContent/home-content.module.scss
@@ -3,9 +3,16 @@
 
   .container {
     text-align: center;
-    padding-top: 2rem;
+    padding-top: 3rem;
+
     h1 {
-      margin-bottom: 2rem;
+      font-size: 3rem;
+      margin-bottom: 3rem;
+    }
+
+    p {
+      font-size: 1.5rem;
+      font-size: 900;
     }
   }
 }
