feat: add padding right to the pre tag

--- a/frontend/src/components/AIAssistant/ai-assistant.module.scss
+++ b/frontend/src/components/AIAssistant/ai-assistant.module.scss
@@ -7,7 +7,7 @@
     pre {
       display: block;
       background-color: whitesmoke;
-      padding: 1rem;
+      padding: 1rem 5rem 1rem 1rem;
       padding-top: 2rem;
       width: 900px;
       margin: auto;
